<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_bmi"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/bmi" />
    <item
        android:id="@+id/nav_tips"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/tips" />
    <item
        android:id="@+id/nav_nutrition"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nutrition" />
    <item
        android:id="@+id/nav_advice"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/advice" />
</menu>